# ph_osx

./: .gitignore  Cargo.toml  README.md  changelog.md
.cargo/: config.toml
assets/: scancode-queue.drawio
bootimage/: Cargo.toml  Readme.md
bootloader/: Cargo.toml  README.md  x86_64-bootloader.json
bootloader/doc/: chainloading.md
bootloader/src/: lib.rs
helper/: 01-freestanding-rust-binary.md  02-minimal-rust-kernel.md  03-vga-text-buffer.md  04-testing.md  05-cpu-exceptions.md  06-double-faults.md  07-hardware-interrupts.md  08-paging-introduction.md  09-paging-implementation.md  10-heap-allocation.md  11-allocator-designs.md  12-async-await.md  README.md
linked-list-allocator/: Cargo.toml  README.md
linked-list-allocator/src/: test.rs
spin/: Cargo.toml  README.md
spin/src/: barrier.rs  lib.rs  mutex.rs  once.rs  rwlock.rs
spin/src/mutex/: spin.rs  ticket.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
x86_64/: Cargo.toml  README.md
x86_64/scripts/: ci-release.py
x86_64/src/structures/: idt.rs
x86_64/testing/: Cargo.toml
x86_64/testing/src/: gdt.rs
