[package]
name = "linked_list_allocator"
version = "0.9.1"
authors = ["ThomasByr"]

description = "Simple allocator usable for no_std systems. It builds a linked list from the freed blocks and thus needs no additional data structures."
keywords = ["allocator", "no_std", "malloc", "heap", "kernel"]

[features]
default = ["use_spin_nightly"]
use_spin = ["spinning_top"]
use_spin_nightly = ["use_spin", "spinning_top/nightly", "const_mut_refs"]
alloc_ref = []
const_mut_refs = []

[dependencies.spinning_top]
version = "0.2.3"
optional = true

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file = "Changelog.md", search = "# Unreleased", replace = "# Unreleased\n\n# {{version}} – {{date}}", exactly = 1 },
]
pre-release-commit-message = "Release version {{version}}"
