[package]
authors = ["ThomasByr"]
description = "Support for x86_64 specific instructions, registers, and structures."
keywords = ["amd64", "x86", "x86_64", "no_std"]
categories = ["no-std"]
name = "x86_64"
readme = "README.md"
version = "0.14.9"
edition = "2021"
rust-version = "1.60"                                                                # Needed to support panic! in const fns

[dependencies]
bit_field = "0.10.1"
bitflags = "1.0.4"
volatile = "0.4"
rustversion = "1.0.5"

[features]
default = ["nightly", "instructions"]
instructions = []
nightly = ["const_fn", "step_trait", "abi_x86_interrupt", "doc_cfg"]
abi_x86_interrupt = []
const_fn = []
step_trait = []
doc_cfg = []

# These features are no longer used and only there for backwards compatibility.
external_asm = []
inline_asm = []
